scss/grouparoo.scss
// -- Colors --

// Grouparoo Colors

$grouparoo-light-gray: #adb5bd;
$grouparoo-dark-gray: #242436;
$grouparoo-yellow: #ff7518;
$grouparoo-light-yellow: #fff8f1;
$grouparoo-red: #ff0039;
$grouparoo-blue: #29abe2;
$grouparoo-light-blue: #b3e8ff;
$grouparoo-blue-gray: #9b9db1;
$grouparoo-violet: #9954bb;
$grouparoo-light-violet: #d3d3ff;
$grouparoo-background-blue: #f6fafb;
$grouparoo-green: #3fb618;

// Bootstrap Colors

$primary: $grouparoo-blue;
$secondary: $grouparoo-dark-gray;
$success: $grouparoo-green;
$info: $grouparoo-light-violet;
$warning: $grouparoo-yellow;
$danger: $grouparoo-red;
$light: $grouparoo-light-gray;
$dark: $grouparoo-dark-gray;

// -- External Components --
@import "~bootstrap/scss/bootstrap";
@import "~@fortawesome/fontawesome-svg-core/styles.css";

// -- Fonts --
// prettier-ignore
@import url(https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap);
@import url(https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap);
@import url(https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap);
$font-header: Inter, sans-serif;
$font-body: IBM Plex Sans, sans-serif;
$font-code: IBM Plex Mono, sans-serif;

// Page Defaults
body {
  background-color: $grouparoo-background-blue;
  font-family: $font-body;
  font-weight: 300;
  font-size: 18px;
  color: $grouparoo-dark-gray;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $font-header;
}

h1 {
  font-size: 72px;
  font-style: normal;
  font-weight: 800;
  line-height: 72px;
  letter-spacing: -1px;
}

h2 {
  font-size: 36px;
  font-style: normal;
  font-weight: 700;
  line-height: 43px;
  letter-spacing: -1px;
}

h3 {
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: 36px;
  letter-spacing: 0px;
}

h4 {
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 24px;
  letter-spacing: -0.4399999976158142px;
}

h5 {
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 21px;
  letter-spacing: -0.4399999976158142px;
}

button > * {
  font-family: $font-header;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 21px;
  letter-spacing: 0px;
}

code,
pre,
pre > code {
  font-family: $font-code;
  font-weight: 500;
  line-height: 25.5px;
}

// -- Typography --
.text-big-muted {
  @extend .text-muted;
  font-weight: 400;
  font-size: 24px;
  line-height: 28px;
}

header {
  font-weight: 400;
}

// -- Nav Bar--

.nav-link {
  font-size: 0.95rem;
}

#basic-nav-dropdown {
  font-size: 0.95rem;
}

#seeMoreLink {
  color: $grouparoo-blue-gray;
}

#seeMoreLink:hover {
  color: black;
  font-weight: 400;
}
.dropdown-menu {
  padding: 1em;
}

.dropdown-item:hover {
  outline: none;
  box-shadow: none;
  background: none;
}
.dropdown-item a:hover {
  color: black;
}

.dropdown-item {
  height: 2em;
  padding-left: 0em;
}

.dropdown-header {
  font-weight: 600;
  padding-left: 0em;
}

@media only screen and (min-width: 600px) {
  .solutionsNav {
    width: 22em;
    padding-bottom: 1em;
  }
  .integrationsNav {
    width: 28em;
    padding-bottom: 1em;
  }
}

// -- Get Started --
#getStartedContainer {
  background-color: #e9ecef;
}

// -- Homepage --
.homePageSection {
  padding-top: 50px;
  padding-bottom: 50px;
}

.homepageBlueH3 {
  color: $grouparoo-blue;
}

// -- Comparison Pages --
.comparisonContent {
  p,
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    max-width: 740px;
    margin-left: auto;
    margin-right: auto;
    padding: 15px 40px 15px 40px;
  }
  ol,
  ul {
    max-width: 680px;
    margin-left: auto;
    margin-right: auto;
    padding: 15px 40px 15px 40px;
  }
  .container-fluid {
    width: 100vw;
  }
}

.featureBanner {
  h3,
  p {
    padding: 0px;
  }
}
.comparisonTableText {
  font-size: 80%;
}

.comparisonTableCell {
  width: 35%;
}

.comparisonTableLabelCell {
  width: 30%;
}
// -- Integrations Pages --

.integrationsBlueH3 {
  color: $grouparoo-blue;
}

.integrationCard:hover {
  box-shadow: 5px 5px 5px 5px grey;
}

.integrationNarrative {
  background-color: $grouparoo-light-violet;
}

// -- Page Content --
.imageOutline {
  border-color: lightgray;
  border-width: 2px;
  border-style: solid;
}

code[class*="language-"] {
  font-size: 14px;
  line-height: 10px;
}

pre > code {
  color: #f8f8f2;
  font-size: 87.5%;
}

// -- Header --
header {
  padding-bottom: 50px;
}

// -- Footer --
footer {
  color: $light;
  background-color: $grouparoo-dark-gray;
  font-size: 14px;
}

footer a {
  text-decoration: none;
  color: $light;
}

// -- HR --
hr {
  border: 1px solid $grouparoo-blue;
}

// -- MDX--
.mdxContent {
  h1 a,
  h2 a,
  h3 a,
  h4 a,
  h5 a,
  h6 a {
    color: $grouparoo-dark-gray;
  }

  blockquote {
    // using defaults from bootstrap
    // .blockquote
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 40px;
    margin-inline-end: 40px;
    margin: 0 0 1rem;
    font-size: 1.25rem;
    // .text-center
    text-align: center !important;
    // change background and padding
    background-color: $light;
    padding: 1rem 1rem 0.25rem 1rem;
  }
}

// -- What's New --
.releasePage .metadata {
  color: $grouparoo-light-gray;
  font-size: 1rem;
}

// -- Documentation --

// -- Docs --

.documentationPage {
  font-size: 15px;

  h1 a,
  h2 a,
  h3 a,
  h4 a,
  h5 a,
  h6 a {
    color: $grouparoo-dark-gray;
  }

  h2,
  h3 {
    padding-top: 20px;
    padding-bottom: 20px;
  }

  h2::after {
    content: " ";
    display: block;
    border: 1px solid $grouparoo-blue-gray;
  }

  li {
    margin-bottom: 1rem; // matches <p>
  }

  .nav-tabs {
    border-bottom: none;
  }

  .tab-content {
    background-color: #fff;
    border: 1px solid #dee2e6;
    border-radius: 0.25rem;
    margin-bottom: 1rem;
  }
}

.docsTableOfContents {
  .sectionHeading {
    display: block;

    & + .sectionHeading {
      margin-top: 1rem;
    }
  }

  ul {
    padding-inline-start: 1rem;
  }
}

//docs group rules tables:
.table-responsive::-webkit-scrollbar {
  -webkit-appearance: none;
}

.table-responsive::-webkit-scrollbar:vertical {
  width: 12px;
}

.table-responsive::-webkit-scrollbar:horizontal {
  height: 12px;
}

.table-responsive::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 10px;
  border: 2px solid #ffffff;
}

.table-responsive::-webkit-scrollbar-track {
  border-radius: 10px;
  background-color: #ffffff;
}

// -- Code --
// @import url(/css/prism.css);

.video-responsive {
  overflow: hidden;
  padding-bottom: 56.25%;
  position: relative;
  height: 0;
  margin-top: 20px;
  margin-bottom: 20px;
}
.video-responsive iframe {
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  position: absolute;
}

// -- trial --

@media only screen and (min-width: 991px) {
  .trialContainer {
    min-height: 100vh;
    // max-height: 100vh;
  }
}

#privacy-policy-check {
  margin-top: 3.7px;
}

